# bmcgw

./: README.md  meson.build
aggregator/: meson.build  readme.md
aggregator/src/: aggregator.cpp  aggregator.hpp  http_handler.hpp
bmcgw/: meson.build  readme.md
bmcgw/src/: bmcgw.cpp  bmcgw.hpp  http_handler.hpp
cert_generator/: cert.conf  meson.build
cert_generator/src/: cert_generator.cpp
credcopier/: meson.build
credcopier/src/: credcopier.cpp  inotify.cpp
filesync/: meson.build
filesync/src/: auth_handler.hpp  file_handler.hpp  file_sync_session.hpp  filesync.cpp  parser.hpp  parser_collections.hpp  sync.hpp  syncdb.hpp
fileuploader/: meson.build
fileuploader/src/: uploader.cpp
heartbeatserver/: README.md  meson.build
heartbeatserver/src/: heartbeatserver.cpp  secure_channel.hpp
httpclient/: README.md  meson.build
httpclient/src/: httpclient.cpp
httpserver/: README.md  meson.build
httpserver/src/: certificate_installer.hpp  dump_uploader.hpp  hello.hpp  httpserver.cpp
include/: asyncserver.hpp  base64_file_body.hpp  beast_defs.hpp  bmcgw.hpp  command_line_parser.hpp  common_defs.hpp  file_sync_session.hpp  requester.hpp  ssl_stream_maker.hpp  ssl_utils.hpp  streams.hpp  tcp_client.hpp  utilities.hpp
netlinkmon/: meson.build
netlinkmon/src/: netlinkmon.cpp
reverseproxy/: README.md  meson.build
reverseproxy/src/: forwarder.hpp  request_forwarder.hpp  rproxy.cpp
src/: bmcgw.cpp
